<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#ffffff"
    tools:context=".Create_Account">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:textColor="#FF6B35"
        android:textSize="50sp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:drawableStart="@drawable/person"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:drawablePadding="5dp"
        android:background="@drawable/edt_style"
        android:hint="@string/first_name"
        />
    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/person"
        android:background="@drawable/edt_style"
        android:layout_marginStart="20dp"
        android:layout_below="@id/name"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:drawablePadding="5dp"
        android:hint="@string/last_name"
        />
    <EditText
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/surname"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/phone"
        android:padding="10dp"
        android:background="@drawable/edt_style"
        android:drawablePadding="5dp"
        android:inputType="phone"
        android:hint="@string/phone_number"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/Phone"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/edt_style"
        android:inputType="textEmailAddress"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edt_style"
        android:layout_below="@id/email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/baseline_security_24"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:inputType="text"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/c_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/baseline_security_24"
        android:layout_below="@id/password"
        android:background="@drawable/edt_style"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:inputType="text"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/c_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit" />
</RelativeLayout>