<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EEF4ED"
    android:backgroundTint="#EEF4ED"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/budgetlogo"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:textSize="50sp"
        android:text="@string/sign_in"
        android:layout_marginTop="250dp"
        android:textColor="#FF6B35"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="350dp"
        android:textColorHint="#555555"
        android:layout_marginStart="20dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:textColor="#5B7C99"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/edt_style"
        android:hint="@string/email_address"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColorHint="#555555"
        android:textColor="#5B7C99"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:inputType="textVisiblePassword"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_security_24"
        android:layout_below="@id/email"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        tools:ignore="TextFields" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@id/forgotPassword"
        android:id="@+id/submit"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/forgotPassword"
        android:textColor="#FF6B35"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:layout_marginStart="280dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/forgotPassword"
        android:text="@string/acc"
        android:textColor="#FF6B35"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:id="@+id/createAccount"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>