<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#ffffff"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="@string/reset_password"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#ff6b35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/email"
        android:background="@drawable/edt_style"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:drawablePadding="7dp"
        android:hint="@string/email_address"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_password_reset_email"
        android:layout_below="@id/email"
        android:textAllCaps="false"
        android:id="@+id/submit"
        android:layout_margin="20dp"
        />
</RelativeLayout>