<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#ffffff"
    tools:context=".Home">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="35sp"
        android:textColor="#FF6B35"
        android:textStyle="bold|normal"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="@string/better_budgeting"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:clipChildren="true"
        android:layout_marginTop="70dp"
        android:clickable="true"
        android:id="@+id/createBudget"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/budget"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/create_new_budget_plan"
            android:layout_marginBottom="20dp"
            />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clipChildren="true"
        android:clickable="true"
        android:layout_below="@id/createBudget"
        android:id="@+id/addTransaction"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/tran"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/add_transactions"
            android:layout_marginBottom="20dp"
            />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clipChildren="true"
        android:clickable="true"
        android:layout_below="@id/autoBill"
        android:id="@+id/viewReport"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/take"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/view_amp_extract_report"
            android:layout_marginBottom="20dp"
            />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:clipChildren="true"
        android:clickable="true"
        android:layout_below="@id/addTransaction"
        android:id="@+id/autoBill"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/add"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/generate_auto_bill_reminder"
            android:layout_marginBottom="20dp"
            />

    </androidx.cardview.widget.CardView>

</RelativeLayout>